# krustlet

./: Cargo.toml
crates/krator/: Cargo.toml
crates/krator-derive/: Cargo.toml
crates/krator-derive/src/: admission.rs  lib.rs  transitions.rs
crates/krator-derive/tests/: admission.rs
crates/krator/examples/: moose.rs
crates/krator/examples/assets/: webhook.yaml
crates/krator/src/: admission.rs  lib.rs  operator.rs
crates/kubelet/: Cargo.toml
crates/wasi-provider/: Cargo.toml
